# erhe

./: .gitignore  CLAUDE.md  CMakeLists.txt  Readme.md
android-project/app/: build.gradle
cmake/: AppleClang.cmake  functions.cmake  libraries.cmake
config/editor/: desktop_window_imgui_host_imgui.ini  desktop_windows.json  editor_settings.json  erhe_graphics.json  graphics_presets_openxr.json  logging.json  text_renderer.json  windows.json
config/example/: erhe_graphics.json  logging.json
config/hello_swap/: erhe_graphics.json  logging.json
config/hextiles/: erhe_graphics.json  window_imgui_host_imgui.ini  windows.json
config/rendering_test/: cube_sphere_masked.json  erhe_graphics.json  minimal_compute_CD.json  pipeline_switch_AB.json  pipeline_switch_BA.json  rendering_test_minimal_C_and_stw1_then_D.json  rendering_test_minimal_C_stw1_D.json  rendering_test_minimal_compute_AB.json  rendering_test_minimal_stw1_then_D.json  rendering_test_pipeline_switch_CA.json  scene_wideline_scene.json  sphere_cube_masked.json  wideline_scene_wideline.json  window.json
doc/: android.md  content_wide_line_renderer_geometry_shader_fallback.md  init_status_display_phase_ii.md  kk_issue.md  metal_backend.md  opengl41_compatibility.md  post_processing.md  profiling-2026-05-01.md  quest.md  vulkan_backend.md  vulkan_openxr.md
res/editor/assets/: vertexcolor_test_grid.glb
res/editor/shaders/: downsample_x.frag  downsample_y.frag  upsample.frag  visualize_depth.frag
res/hextiles/shaders/: text.frag  text.vert  tile.frag  tile.vert
res/rendering_test/shaders/: content_line_after_compute.frag  depth_visualize.vert  minimal_triangle.frag  stencil_color.frag
res/shaders/: compute_before_content_line.comp  erhe_half.glsl  erhe_light.glsl  erhe_texture.glsl  standard.frag  standard.vert  standard_debug.frag  text.frag  textured.frag
scripts/: build_android.bat  configure_vs2026_vulkan.bat  configure_vs2026_vulkan_asan.bat  configure_xcode_metal_asan.sh  configure_xcode_vulkan.sh  configure_xcode_vulkan_asan.sh  configure_xcode_vulkan_minimal.sh  install_android.bat  ovr_metrics_hud.bat  ovr_metrics_hud.sh  run_android.bat
src/: CMakeLists.txt
src/editor/: CMakeLists.txt  app_context.hpp  app_rendering.cpp  app_rendering.hpp  app_settings.cpp  app_settings.hpp  default_viewport_config.json  editor.cpp  editor_default_layout.cpp  editor_default_layout.hpp  editor_settings.json  imgui_Hud Viewport.ini  imgui_window_imgui_host.ini  init_status_display.cpp  init_status_display.hpp  items.cpp  main.cpp  rendertarget_imgui_host.cpp  rendertarget_mesh.cpp  rendertarget_mesh.hpp  time.cpp
src/editor/asset_browser/: asset_browser.cpp
src/editor/config/: editor_settings.json  erhe_graphics.json  graphics_presets.json  logging.json  mesh_memory.json  notes.md  openxr_windows.json  renderer.json  windows.json
src/editor/content_library/: brdf_slice.cpp  brdf_slice.hpp
src/editor/create/: create.cpp
src/editor/developer/: depth_visualization_window.cpp  depth_visualization_window.hpp  post_processing_window.cpp
src/editor/graphics/: thumbnails.cpp
src/erhe/: CMakeLists.txt
src/erhe/verify/: CMakeLists.txt
src/erhe/verify/erhe_verify/: verify.cpp  verify.hpp
src/example/: CMakeLists.txt  example.cpp  programs.cpp  programs.hpp
src/example/config/: erhe_graphics.json  logging.json
src/example/res/shaders/: erhe_light.glsl
src/hello_swap/: CMakeLists.txt  hello_swap.cpp
src/hextiles/: CMakeLists.txt  hextiles.cpp  imgui_window_imgui_host.ini  map_window.cpp  stream.cpp  tile_renderer.cpp  tile_renderer.hpp  windows.ini
src/mango/: CMakeLists.txt
src/rendering_test/: CMakeLists.txt  cell_depth_visualize.cpp  cell_minimal_compute_triangle.cpp  cell_multi_texture.cpp  cell_scene.cpp  cell_separate_samplers.cpp  cell_stencil.cpp  cell_stencil_wide_line.cpp  cell_textured_quad.cpp  main.cpp  programs.cpp  programs.hpp  rendering_test.cpp  rendering_test.hpp  rendering_test_app.hpp  rendering_test_setup.cpp
(+392 files in other folders)
